<resources>
    <string name="app_name">WantHelpApp</string>

    <!-- SplashScreen -->
    <string name="splash_screen_loading">Загрузка…</string>

    <!-- MainActivity -->
    <string name="title_news">Новости</string>
    <string name="title_search">Поиск</string>
    <string name="title_help">Помочь</string>
    <string name="title_history">История</string>
    <string name="title_profile">Профиль</string>

    <!-- ProfileFragment -->
    <string name="date_of_birth_title">Дата рождения</string>
    <string name="working_title">Сфера деятельности</string>
    <string name="push_notifications">Получать push-уведомления</string>
    <string name="list_friends_title">Ваши друзья</string>
    <string name="logout_button_text">Выйти из аккаунта</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="create_photo">Сделать снимок</string>
    <string name="removed_photo">Удалить</string>
    <string name="warning_permission_create_photo">Для добавления фотографии необходимо предоставить доступ в настройках приложения</string>

    <!-- HelpFragment -->
    <string name="select_help">Выберете категорию помощи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_filter">Фильтр</string>
    <string name="category_help">Категории помощи:</string>
    <string name="title_item_filter_money">Деньгами</string>
    <string name="titile_item_filter_thing">Вещами</string>
    <string name="title_item_filter_prof_helps">Проф. помощью</string>
    <string name="titile_item_filter_volunteering">Волонтерством</string>

    <!-- SearchFragment -->
    <string name="tab_name_search_by_events">По мероприятиям</string>
    <string name="tab_name_search_by_nko">По НКО</string>
    <string name="hint_input_name_organization">Введите название организации</string>
    <string name="hint_input_title_event">Введите название мероприятия</string>

    <!-- SearchFragmentNKO-->
    <string name="tmp_key_words">Ключевые слова: мастер-класс, помощь</string>
    <string name="tmp_result_search">Результаты поиска: 109 мероприятий</string>

    <!-- SearchFragmentEvents -->
    <string name="init_help_search_text">Напишите в строке поиска название\nмероприятия или ключевые слова.</string>
    <string name="exemple">Например,</string>
    <string name="example_items"><u>мастер-класс, помощь</u></string>

    <!-- HelpCategory -->
    <string name="title_help_children">Дети</string>
    <string name="title_help_adults">Взрослые</string>
    <string name="title_help_elderly">Пожилые</string>
    <string name="title_help_animals">Животные</string>
    <string name="title_help_events">Мероприятия</string>

    <!-- NewsFragment -->
    <string name="empty_news_list">По заданным категориям новостей нет</string>

    <!-- FilterFragment -->
    <string name="filter_change_apply">Изменения приняты</string>

    <!-- NewsDetailFragment -->
    <string name="hyperlink_news_owner_mail"><u>Напишите нам</u></string>
    <string name="hyperlink_news_owner_web"><u>Перейти на сайт организации</u></string>
    <string name="help_things">Помочь\nвещами</string>
    <string name="help_volunteer">Стать\nволонтером</string>
    <string name="help_prof">Проф.\nпомощь</string>
    <string name="help_money">Помочь\nденьгами</string>
    <string name="questions_news">У вас есть вопросы?</string>
    <string name="temp_count_102">+102</string>

    <!-- AuthorizationFragment -->
    <string name="title_authorization">Авторизация</string>
    <string name="sign_in_through_social_networks">Для участия в мероприятиях войдите\nв приложение через социальные сети</string>
    <string name="login_authorization">Или авторизуйтесь через приложение</string>
    <string name="email_title">E-mail</string>
    <string name="hint_input_e_mail">Введите e-mail</string>
    <string name="password_title">Пароль</string>
    <string name="hint_input_password">Введите пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="forgot_your_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="events_not_found">События по заданному критерию не найдены</string>

</resources>