<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news_graph"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news">
    </item>

    <item
        android:id="@+id/search_graph"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/help_graph"
        android:icon="@drawable/ic_help"
        android:title="@string/title_help" />

    <item
        android:id="@+id/history_graph"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/profile_graph"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>