<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="32dp"
    android:paddingStart="24dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:id="@+id/item_select_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_upload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_title_item_dialog_fragment"
            android:text="@string/select_photo"
            android:textSize="@dimen/text_size_dialog_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_create_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_title_item_dialog_fragment"
            android:text="@string/create_photo"
            android:textSize="@dimen/text_size_dialog_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_delete_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_title_item_dialog_fragment"
            android:text="@string/removed_photo"
            android:textSize="@dimen/text_size_dialog_item" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>